--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "backend",
+  "name": "dicom-viewer-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "DICOM Viewer Backend with MongoDB Storage",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "bcryptjs": "^2.4.3",
+    "bson": "^5.5.1",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.4",
-    "express": "^5.2.1",
-    "express-validator": "^7.3.1",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.3",
+    "dicom-parser": "^1.8.21",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "express-validator": "^7.0.1",
+    "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.1.0",
     "mongoose": "^9.2.1",
-    "morgan": "^1.10.1",
-    "multer": "^2.0.2"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.0.1"
   }
 }
