--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,19 @@
     "cornerstone-core": "^2.6.1",
     "cornerstone-tools": "^6.0.10",
     "cornerstone-wado-image-loader": "^4.13.2",
+    "cornerstone-web-image-loader": "^2.1.1",
     "dicom-parser": "^1.8.21",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^3.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy": "http://localhost:5000"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   }
 }
