--- a/backend/package.json
+++ b/backend/package.json
@@ -9,18 +9,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "bson": "^5.5.1",
-    "cors": "^2.8.6",
+    "cors": "^2.8.5",
     "dicom-parser": "^1.8.21",
-    "dotenv": "^16.6.1",
-    "express": "^4.22.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^7.1.0",
-    "mongoose": "^9.2.1",
+    "mongoose": "^7.6.3",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.6"
+    "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
